# gosilero

./: .gitignore  README.md  go.mod  go.sum  gosilero.go  gosilero_test.go  tiny_silero.go
cmd/gosilero/: main.go
gosilero-rs/: Cargo.toml  build.rs  gosilero.h
gosilero-rs/src/: lib.rs
