[package]
name = "gosilero-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
#voice-engine = "0.3.27"
voice-engine = { path = "../../voice-engine" }
anyhow = "1.0"
libc = "0.2"
once_cell = "1.21.1"
ndarray = "0.17.1"

[build-dependencies]
cbindgen = "0.29.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
debug = false
